footer fixed- needs a app-wrapper wrapping the whole app.js with flex and height 100svh

--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -1,11 +1,6 @@
 #footer{
-  position: absolute;
-  bottom: 0;
-  box-sizing: border-box;
+  margin-top: auto;  
   width: 100%; 
-  /* height: 2.5rem; */
-  /* margin-top: 2.5rem; */
-  /*! height: around 400px; so add padding bottom to root for 500px */
 }
 
 .footer-container {
