--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -22,14 +22,12 @@ body {
   font-size: small;
 }
 
-
-
-#root{
-  position: relative;
-  min-height: 100vh;
-  min-height: 100%;
-  padding-bottom: 500px;
-  /*! to accommodate footer height around 400ish */
+/* app wrapper is sort of like the root of the page */
+.app-wrapper{
+  display: flex;
+  flex-direction: column;
+  height: 100svh; 
+  gap: 1rem;
 }
 
 /* .center-children {
